<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/menu_sign_in" />
        <item
            android:id="@+id/current_weather"
            android:icon="@drawable/ic_current_weather"
            android:title="@string/menu_current_weather" />
        <item
            android:id="@+id/weather_forecast"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_weather_forecast" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/menu_sign_out" />
    </group>
</menu>