<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="net.gahfy.chilindoweather.utils.StringUtils" />

        <import type="java.util.Locale" />

        <variable
            name="preferredTemperatureIndex"
            type="int" />

        <variable
            name="preferredSpeedIndex"
            type="int" />

        <variable
            name="weather"
            type="net.gahfy.chilindoweather.model.weather.CurrentWeather" />

        <variable
            name="locale"
            type="java.util.Locale" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/current_weather_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/weather_calculation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@{weather.getCalculationDateTime(context)}"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="03-22-2018 08:30 PM" />

        <TextView
            android:id="@+id/weather_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@{weather.getWindSpeed(context, preferredSpeedIndex)}"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date"
            tools:text="215 mph" />

        <TextView
            android:id="@+id/weather_direction_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_directon_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/weather_wind_speed" />

        <TextView
            android:id="@+id/weather_gust_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.getWindDirection(context)}"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/weather_direction_label"
            tools:text="35°N" />

        <TextView
            android:id="@+id/weather_humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="90dp"
            android:layout_marginTop="48dp"
            android:text="@string/humidity_label"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
            app:layout_constraintTop_toBottomOf="@+id/weather_gust_speed" />

        <TextView
            android:id="@+id/weather_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.getHumidity(context)}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/weather_humidity_label"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
            app:layout_constraintTop_toTopOf="@+id/weather_humidity_label"
            tools:text="100 %" />

        <TextView
            android:id="@+id/weather_pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_label"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/weather_humidity_label"
            app:layout_constraintTop_toBottomOf="@+id/weather_humidity_label" />

        <TextView
            android:id="@+id/weather_pressure_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.getAtmosphericPressure(context)}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_speed"
            app:layout_constraintTop_toTopOf="@+id/weather_pressure_label"
            tools:text="1015hPa" />

        <ImageView
            android:id="@+id/weather_wind_direction_circle"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:contentDescription="@string/wind_direction_circle_content_description"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/weather_gust_speed"
            app:layout_constraintStart_toStartOf="@+id/weather_humidity_label"
            app:layout_constraintTop_toTopOf="@+id/weather_wind_speed"
            app:srcCompat="@drawable/wind_direction_circle" />

        <ImageView
            android:id="@+id/weather_wind_direction_arrow"
            android:layout_width="20dp"
            android:layout_height="33dp"
            android:contentDescription="@{weather.getWindDirection(context)}"
            android:rotation="@{weather.getWindDirectionAngle()}"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/weather_wind_direction_circle"
            app:layout_constraintEnd_toEndOf="@+id/weather_wind_direction_circle"
            app:layout_constraintStart_toStartOf="@+id/weather_wind_direction_circle"
            app:layout_constraintTop_toTopOf="@+id/weather_wind_direction_circle"
            app:srcCompat="@drawable/wind_direction_arrow" />

        <TextView
            android:id="@+id/weather_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weather.getTemperature(context, preferredTemperatureIndex)}"
            android:textColor="@color/colorPrimary"
            android:textSize="53sp"
            app:layout_constraintBottom_toBottomOf="@+id/weather_pressure_label"
            app:layout_constraintStart_toStartOf="@+id/weather_calculation_date"
            tools:text="130°" />

        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@{weather.getConditionDescriptionResId()}"
            android:src="@{weather.getIconResId()}"
            app:layout_constraintBottom_toTopOf="@+id/weather_temperature"
            app:layout_constraintEnd_toStartOf="@+id/weather_humidity_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_calculation_date"
            tools:src="@drawable/broken_clouds" />
    </android.support.constraint.ConstraintLayout>
</layout>